--- a/Project Codes/02. Data Cleaning Scripts/12_27_2019_Listings_Cleaning.ipynb
+++ b/Project Codes/02. Data Cleaning Scripts/12_27_2019_Listings_Cleaning.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -1281,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -1359,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -1395,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
@@ -1434,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -1532,7 +1532,7 @@
        "2       485.00  "
       ]
      },
-     "execution_count": 209,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1563,7 +1563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -1648,7 +1648,7 @@
        "2                          False              True  "
       ]
      },
-     "execution_count": 210,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1683,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -2342,7 +2342,7 @@
        "50624          NaN           NaN  "
       ]
      },
-     "execution_count": 211,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2367,7 +2367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -2394,7 +2394,7 @@
        "Name: city, dtype: int64"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2412,7 +2412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -2426,7 +2426,7 @@
        "Name: city, dtype: int64"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2451,7 +2451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2468,20 +2468,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\kishe\\Miniconda3\\lib\\site-packages\\ipykernel_launcher.py:5: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \"\"\"\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -2500,6 +2489,17 @@
       "89605  37.727920 -122.440290      CA\n",
       "96959  37.727920 -122.440290      CA\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kishe\\Miniconda3\\lib\\site-packages\\ipykernel_launcher.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \"\"\"\n"
+     ]
     }
    ],
    "source": [
@@ -2512,7 +2512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2532,7 +2532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2546,12 +2546,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Write out file\n"
+    "# Write out file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
