Model optimized through random search CV

--- a/Project Codes/05. Modeling/01_19_2020_Listings_Supervised_Learning.ipynb
+++ b/Project Codes/05. Modeling/01_19_2020_Listings_Supervised_Learning.ipynb
@@ -37,7 +37,11 @@
     "#Set options for pandas\n",
     "pd.options.display.max_columns =1_000\n",
     "pd.set_option('display.max_rows', 1_000)\n",
-    "pd.set_option('display.float_format', '{:.2f}'.format)\n"
+    "pd.set_option('display.float_format', '{:.2f}'.format)\n",
+    "\n",
+    "#Surpress future warnings\n",
+    "import warnings\n",
+    "warnings.simplefilter(action='ignore', category=FutureWarning)\n"
    ]
   },
   {
@@ -3760,30 +3764,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# #Number of features\n",
-    "# print('# of features: {}'.format(X_train.shape[1]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# #Visualize chosen features\n",
-    "# mask = select.get_support()\n",
-    "\n",
-    "# plt.matshow(mask.reshape(1,-1), cmap = 'gray_r')\n",
-    "# plt.xlabel('Sample Index')\n",
-    "# plt.yticks(());"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3794,7 +3774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3809,7 +3789,7 @@
     "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor, BaggingRegressor\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.neural_network import MLPRegressor\n",
-    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.linear_model import Ridge, Lasso,SGDRegressor\n",
     "\n",
     "#Pipeline\n",
     "from sklearn.pipeline import Pipeline\n",
@@ -3820,7 +3800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -3834,20 +3814,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "building tree 1 of 100building tree 2 of 100\n",
-      "\n",
+      "building tree 1 of 100\n",
+      "building tree 2 of 100\n",
       "building tree 3 of 100\n",
       "building tree 4 of 100\n",
       "building tree 5 of 100\n",
       "building tree 6 of 100\n",
-      "building tree 7 of 100\n",
-      "building tree 8 of 100\n",
+      "building tree 7 of 100building tree 8 of 100\n",
+      "\n",
       "building tree 9 of 100\n",
       "building tree 10 of 100\n",
       "building tree 11 of 100\n",
       "building tree 12 of 100\n",
-      "building tree 13 of 100\n",
-      "building tree 14 of 100\n",
+      "building tree 13 of 100building tree 14 of 100\n",
+      "\n",
       "building tree 15 of 100\n",
       "building tree 16 of 100\n",
       "building tree 17 of 100\n",
@@ -3872,7 +3852,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Done  25 tasks      | elapsed:   15.1s\n"
+      "[Parallel(n_jobs=-1)]: Done  25 tasks      | elapsed:   28.9s\n"
      ]
     },
     {
@@ -3953,7 +3933,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Done 100 out of 100 | elapsed:   49.9s finished\n"
+      "[Parallel(n_jobs=-1)]: Done 100 out of 100 | elapsed:  1.7min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New training data shape: (49325, 234)\n"
      ]
     }
    ],
@@ -3978,59 +3965,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(49325, 234)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Create list of regression models to iterate over and test in pipeline\n",
     "regressors = [RandomForestRegressor(), \n",
-    "             GradientBoostingRegressor(), \n",
-    "             BaggingRegressor(),\n",
-    "            MLPRegressor(),\n",
-    "            LinearRegression()]"
+    "              GradientBoostingRegressor(), \n",
+    "              BaggingRegressor(),\n",
+    "             MLPRegressor(),\n",
+    "             SGDRegressor()]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What are the best metrics to evaluate this model?\n",
-    "MSE\n",
-    "RSE"
+    "* Create list of different scoring methods to evaluate model\n",
+    "* add to cross validate\n",
+    "* Remove linear regression, figure out which models do well with sparse data(SVM)\n",
+    "* Review models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      " RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
+      "=============================================\n",
+      "RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
       "                      max_features='auto', max_leaf_nodes=None,\n",
       "                      min_impurity_decrease=0.0, min_impurity_split=None,\n",
       "                      min_samples_leaf=1, min_samples_split=2,\n",
-      "                      min_weight_fraction_leaf=0.0, n_estimators=10,\n",
+      "                      min_weight_fraction_leaf=0.0, n_estimators='warn',\n",
       "                      n_jobs=None, oob_score=False, random_state=None,\n",
       "                      verbose=0, warm_start=False)\n",
-      "Avg CV r2 test score:  0.9385324323564873\n",
-      "Adjusted r squared is:  8.191706660465696\n",
-      "\n",
-      " GradientBoostingRegressor(alpha=0.9, criterion='friedman_mse', init=None,\n",
+      "Mean R2 Score:  0.9419276139322944\n",
+      "Mean MSE Score:  -351.02501129274515\n",
+      "Mean MAE Score:  -8.394128388759407\n",
+      "=============================================\n",
+      "=============================================\n",
+      "GradientBoostingRegressor(alpha=0.9, criterion='friedman_mse', init=None,\n",
       "                          learning_rate=0.1, loss='ls', max_depth=3,\n",
       "                          max_features=None, max_leaf_nodes=None,\n",
       "                          min_impurity_decrease=0.0, min_impurity_split=None,\n",
@@ -4039,15 +4018,19 @@
       "                          n_iter_no_change=None, presort='auto',\n",
       "                          random_state=None, subsample=1.0, tol=0.0001,\n",
       "                          validation_fraction=0.1, verbose=0, warm_start=False)\n",
-      "Avg CV r2 test score:  0.6654584679595809\n",
-      "Adjusted r squared is:  40.14136603112199\n",
-      "\n",
-      " BaggingRegressor(base_estimator=None, bootstrap=True, bootstrap_features=False,\n",
+      "Mean R2 Score:  0.6641911053769383\n",
+      "Mean MSE Score:  -2029.8452268919295\n",
+      "Mean MAE Score:  -33.50674613811516\n",
+      "=============================================\n",
+      "=============================================\n",
+      "BaggingRegressor(base_estimator=None, bootstrap=True, bootstrap_features=False,\n",
       "                 max_features=1.0, max_samples=1.0, n_estimators=10,\n",
       "                 n_jobs=None, oob_score=False, random_state=None, verbose=0,\n",
       "                 warm_start=False)\n",
-      "Avg CV r2 test score:  0.9385827497132286\n",
-      "Adjusted r squared is:  8.185819528706842\n"
+      "Mean R2 Score:  0.9414387687822868\n",
+      "Mean MSE Score:  -353.98145440880927\n",
+      "Mean MAE Score:  -8.476595283001618\n",
+      "=============================================\n"
      ]
     },
     {
@@ -4070,48 +4053,244 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      " MLPRegressor(activation='relu', alpha=0.0001, batch_size='auto', beta_1=0.9,\n",
+      "=============================================\n",
+      "MLPRegressor(activation='relu', alpha=0.0001, batch_size='auto', beta_1=0.9,\n",
       "             beta_2=0.999, early_stopping=False, epsilon=1e-08,\n",
       "             hidden_layer_sizes=(100,), learning_rate='constant',\n",
       "             learning_rate_init=0.001, max_iter=200, momentum=0.9,\n",
       "             n_iter_no_change=10, nesterovs_momentum=True, power_t=0.5,\n",
       "             random_state=None, shuffle=True, solver='adam', tol=0.0001,\n",
       "             validation_fraction=0.1, verbose=False, warm_start=False)\n",
-      "Avg CV r2 test score:  0.8967982966185672\n",
-      "Adjusted r squared is:  13.074601387907478\n",
-      "\n",
-      " LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)\n",
-      "Avg CV r2 test score:  0.5804919264248392\n",
-      "Adjusted r squared is:  50.08245311327251\n"
+      "Mean R2 Score:  0.9389120673326617\n",
+      "Mean MSE Score:  -369.2678663118007\n",
+      "Mean MAE Score:  -11.172730736989479\n",
+      "=============================================\n",
+      "=============================================\n",
+      "SGDRegressor(alpha=0.0001, average=False, early_stopping=False, epsilon=0.1,\n",
+      "             eta0=0.01, fit_intercept=True, l1_ratio=0.15,\n",
+      "             learning_rate='invscaling', loss='squared_loss', max_iter=1000,\n",
+      "             n_iter_no_change=5, penalty='l2', power_t=0.25, random_state=None,\n",
+      "             shuffle=True, tol=0.001, validation_fraction=0.1, verbose=0,\n",
+      "             warm_start=False)\n",
+      "Mean R2 Score:  -5462803751834.114\n",
+      "Mean MSE Score:  -3.3094448083223896e+16\n",
+      "Mean MAE Score:  -59615723.27229915\n",
+      "=============================================\n"
      ]
     }
    ],
    "source": [
-    "#Write a function that captures regression statistics for model evaluation\n",
-    "def model_stats(model, training_data, target):\n",
-    "    yhat = model.predict(training_data)\n",
-    "    SS_Residual = sum((target-yhat)**2)\n",
-    "    SS_Total = sum((target-np.mean(target))**2)\n",
-    "    r_squared = 1 - (float(SS_Residual))/SS_Total\n",
-    "    adjusted_r_squared = 1 - (1-r_squared)*(len(y)-1)/(len(y)-X.shape[1]-1)\n",
-    "    print('R squared is: ', r_squared)\n",
-    "    print('Adjusted r squared is: ', adjusted_r_squared)\n",
-    "    print('=============================================')\n",
-    "\n",
-    "def adjusted_r2(r2_score, training_data, target):\n",
-    "    adjusted_r2 = 1 - (1-r2_score) * ((len(X_train)-1)/(len(X_train)) - len(X_train.T) - 1)\n",
-    "    print('Adjusted r squared is: ', adjusted_r2)\n",
-    "    \n",
     "#Run base models to see which performs best on training data\n",
     "for regressor in regressors:\n",
     "    pipe = Pipeline(steps=[('Model', regressor)], verbose=False) #Fit regressor\n",
-    "    r2_val_score  = cross_validate(pipe,X_train, y_train,scoring='r2', cv =5)\n",
-    "    print('\\n',regressor)\n",
-    "    print('CV S')\n",
-    "    print('Avg CV r2 test score: ',r2_val_score['test_score'].mean())\n",
-    "    adjusted_r2(r2_val_score['test_score'].mean(), X_train, y_train)\n",
-    "    print('============================================='"
+    "    scores  = cross_validate(pipe,X_train, y_train,scoring=('r2','neg_mean_absolute_error','neg_mean_squared_error'), cv =5)\n",
+    "    print('=============================================')\n",
+    "    print(regressor)\n",
+    "    print('Mean R2 Score: ', np.mean(scores['test_r2']))\n",
+    "    print('Mean MSE Score: ', np.mean(scores['test_neg_mean_squared_error']))\n",
+    "    print('Mean MAE Score: ', np.mean(scores['test_neg_mean_absolute_error']))\n",
+    "    print('=============================================')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "#MSE “Mean squared error” is perhaps the most popular metric used for regression problems. \n",
+    "#It essentially finds the average squared error between the predicted and actual values.\n",
+    "\n",
+    "#MAE Mean absolute error (or mean absolute deviation) is another metric which finds the average \n",
+    "#absolute distance between the predicted and target values.MAE is known to be more robust to the outliers than MSE\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "RandomForestRegressor will be the model of choice. Let's see if we can reduce that average MSE."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tune Hyperparameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random Search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest parameters:  <bound method BaseEstimator.get_params of RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
+      "                      max_features='auto', max_leaf_nodes=None,\n",
+      "                      min_impurity_decrease=0.0, min_impurity_split=None,\n",
+      "                      min_samples_leaf=1, min_samples_split=2,\n",
+      "                      min_weight_fraction_leaf=0.0, n_estimators='warn',\n",
+      "                      n_jobs=None, oob_score=False, random_state=None,\n",
+      "                      verbose=0, warm_start=False)>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Random Forest parameters: ', RandomForestRegressor().get_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Set values for RandomForestRegressor hyperparameters\n",
+    "max_depth = [15,20, 25, 30]\n",
+    "\n",
+    "max_features= ['auto', 'sqrt', 'log2']\n",
+    "\n",
+    "n_estimators = [10,50,75,100]\n",
+    "\n",
+    "bootstrap=[True, False]\n",
+    "\n",
+    "min_samples_leaf = [1,3,5]\n",
+    "\n",
+    "param_grid = {'max_depth' : max_depth,\n",
+    "            'max_features':max_features,\n",
+    "            'n_estimators':n_estimators,\n",
+    "            'bootstrap': bootstrap,\n",
+    "            'min_samples_leaf' : min_samples_leaf,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "View random_model parameters:  <bound method BaseEstimator.get_params of RandomizedSearchCV(cv='warn', error_score='raise-deprecating',\n",
+      "                   estimator=RandomForestRegressor(bootstrap=True,\n",
+      "                                                   criterion='mse',\n",
+      "                                                   max_depth=None,\n",
+      "                                                   max_features='auto',\n",
+      "                                                   max_leaf_nodes=None,\n",
+      "                                                   min_impurity_decrease=0.0,\n",
+      "                                                   min_impurity_split=None,\n",
+      "                                                   min_samples_leaf=1,\n",
+      "                                                   min_samples_split=2,\n",
+      "                                                   min_weight_fraction_leaf=0.0,\n",
+      "                                                   n_estimators='warn',\n",
+      "                                                   n_jobs=-1, oob_score=False,\n",
+      "                                                   random_...2, verbose=0,\n",
+      "                                                   warm_start=False),\n",
+      "                   iid='warn', n_iter=10, n_jobs=-1,\n",
+      "                   param_distributions={'bootstrap': [True, False],\n",
+      "                                        'max_depth': [15, 20, 25, 30],\n",
+      "                                        'max_features': ['auto', 'sqrt',\n",
+      "                                                         'log2'],\n",
+      "                                        'min_samples_leaf': [1, 3, 5],\n",
+      "                                        'n_estimators': [10, 50, 75, 100]},\n",
+      "                   pre_dispatch='2*n_jobs', random_state=None, refit=True,\n",
+      "                   return_train_score=False, scoring='neg_mean_squared_error',\n",
+      "                   verbose=1)>\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "random_model = RandomizedSearchCV(RandomForestRegressor(random_state = 42, n_jobs=-1), param_distributions= param_grid, n_jobs=-1,\n",
+    "                           scoring = ('neg_mean_squared_error'),\n",
+    "                                verbose =1)\n",
+    "\n",
+    "print('View random_model parameters: ', random_model.get_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 10 candidates, totalling 30 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done  30 out of  30 | elapsed:  2.2min finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "search = random_model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-36.86161171092091\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'n_estimators': 100,\n",
+       " 'min_samples_leaf': 1,\n",
+       " 'max_features': 'sqrt',\n",
+       " 'max_depth': 30,\n",
+       " 'bootstrap': True}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(search.score(X_train, y_train))\n",
+    "\n",
+    "search.best_params_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gridsearch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV"
    ]
   },
   {
@@ -4119,14 +4298,41 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Set values for RandomForestRegressor hyperparameters\n",
+    "max_depth = [25, 30, 35]\n",
+    "\n",
+    "max_features= ['auto', 'sqrt', 'log2']\n",
+    "\n",
+    "n_estimators = [80,100,120]\n",
+    "\n",
+    "bootstrap=[True, False]\n",
+    "\n",
+    "min_samples_leaf = [1,2,3]\n",
+    "\n",
+    "param_grid = {'max_depth' : max_depth,\n",
+    "            'max_features':max_features,\n",
+    "            'n_estimators':n_estimators,\n",
+    "            'bootstrap': bootstrap,\n",
+    "            'min_samples_leaf' : min_samples_leaf,\n",
+    "}"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "GridSearchCV(RandomForestRegressor(), X_train, y_train, n_jobs=)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Deploy"
+   ]
   },
   {
    "cell_type": "code",
